--- a/css/styles.css
+++ b/css/styles.css
@@ -172,4 +172,192 @@ select {
 select::-ms-expand {
   display: none;
 }
+
+.blog__title {
+  font-family: "Noto Sans JP";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  font-size: 1.25rem;
+  letter-spacing: 2px;
+  letter-spacing: 0.125rem;
+  line-height: 1.45;
+  color: #fff;
+  text-align: center;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.blog__wrap {
+  padding: 0px 20px;
+  padding: 0rem 1.25rem;
+  background-color: #111;
+}
+.btn__wrap {
+  padding-top: 10px;
+  padding-top: 0.625rem;
+  padding-bottom: 10px;
+  padding-bottom: 0.625rem;
+  background-color: #333;
+  border: 1px solid #fff;
+}
+.btn__wrap p {
+  color: #fff;
+  text-align: center;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.card__badge--text {
+  position: absolute;
+  z-index: 2;
+  top: -10px;
+  top: -0.625rem;
+  left: -7px;
+  left: -0.4375rem;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.card__badge {
+  position: relative;
+}
+.card__badge::after {
+  content: "";
+  position: absolute;
+  top: -28px;
+  top: -1.75rem;
+  left: -19px;
+  left: -1.1875rem;
+  width: 0;
+  height: 0;
+  z-index: 1;
+  border-width: 30px;
+  border-width: 1.875rem;
+  border-style: solid;
+  border-color: #ffba6a;
+  border-radius: 50%;
+}
+.card__body--small {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.card__body {
+  background-color: #fff;
+  padding-top: 4px;
+  padding-top: 0.25rem;
+  padding-right: 20px;
+  padding-right: 1.25rem;
+  padding-left: 20px;
+  padding-left: 1.25rem;
+  padding-bottom: 16px;
+  padding-bottom: 1rem;
+  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.card__category {
+  background-color: #ffea2e;
+}
+.card__category p {
+  font-family: "Noto Sans JP";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  letter-spacing: 0.0625rem;
+  line-height: 1.857;
+  color: #000000;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.card__datetime {
+  font-family: "Noto Sans JP";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  letter-spacing: 0.0625rem;
+  line-height: 1.857;
+  color: #333333;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.card__explain {
+  font-family: "Noto Sans JP";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  letter-spacing: 0.0625rem;
+  line-height: 1.857;
+  color: #333333;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.card__img--wrap {
+  position: relative;
+  padding-top: 66.567%;
+  overflow: hidden;
+}
+.card__img {
+  position: absolute;
+  top: 0%;
+  width: 100%;
+  -webkit-transform: translatey(0);
+          transform: translatey(0);
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.card__link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.card__link:hover .card__title,
+.card__link:hover .card__explain,
+.card__link:hover .card__datetime {
+  color: #fff;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.card__link:hover .card__body {
+  background-color: #333;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.card__link:hover .card__img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.card__title {
+  font-family: "Noto Sans JP";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  font-size: 1.125rem;
+  letter-spacing: 1px;
+  letter-spacing: 0.0625rem;
+  line-height: 1.944;
+  color: #333333;
+  -webkit-transition: 0.75s;
+  transition: 0.75s;
+}
+.card {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
 /*# sourceMappingURL=styles.css.map */
