--- a/src/sass/module/_card__body.scss
+++ b/src/sass/module/_card__body.scss
@@ -5,7 +5,7 @@
   padding-right: rem(20);
   padding-left: rem(20);
   padding-bottom: rem(16);
-  margin-bottom: rem(24);
+  // margin-bottom: rem(24);
   transition: $slow;
   @include mq(md) {
   }
