--- a/src/sass/module/_blog__wrap.scss
+++ b/src/sass/module/_blog__wrap.scss
@@ -1,8 +1,11 @@
 @use "global" as *;
 .blog__wrap {
-  padding: rem(0) rem(20);
+  padding-top: rem(50);
+  padding-right: rem(20);
+  padding-left: rem(20);
   background-color: #111;
   @include mq(md) {
+    padding-top: rem(71);
   }
   @include mq(xl) {
   }
